--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br />
     <a href="https://www.linkedin.com/in/eenkhmunkh/">LinkedIn</a>
     <a> | </a>
-    <a href="https://github.com/e-bold">github</a>
+    <a href="https://github.com/e-bold">GitHub</a>
     <hr />
     <h2>Summary</h2>
     <p>
