--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./assets/styles.css">
     <meta charset="UTF-8" />
     <title>Enkhbold Resume</title>
   </head>
@@ -15,6 +16,7 @@
     <a href="https://www.linkedin.com/in/eenkhmunkh/">LinkedIn</a>
     <a> | </a>
     <a href="https://github.com/e-bold">GitHub</a>
+    <br/>
 
     <h2>Summary</h2>
     <p>
