Further stylized CSS

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
       alt="enkhmunkh enkhbold headshot"
     />
     <br />
-    <a href="https://www.linkedin.com/in/eenkhmunkh/">LinkedIn</a>
-    <a> | </a>
-    <a href="https://github.com/e-bold">GitHub</a>
+    <div class="links-container">
+      <a href="https://www.linkedin.com/in/eenkhmunkh/">LinkedIn</a>
+      <a> | </a>
+      <a href="https://github.com/e-bold">GitHub</a>
+    </div>
     <br/>
 
     <h2>Summary</h2>
